--- a/bcms/myplat.Biz/myplat.Biz.csproj
+++ b/bcms/myplat.Biz/myplat.Biz.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoreBiz.cs" />
+    <Compile Include="ImageBiz.cs" />
     <Compile Include="ManagerBiz.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAuthCookie.cs" />
