--- a/bcms/myplat.Biz/myplat.Biz.csproj
+++ b/bcms/myplat.Biz/myplat.Biz.csproj
@@ -34,6 +34,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Assembly\Tiexue.Mobile.Assembly\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
+      <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net45\Qiniu.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -47,7 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoreBiz.cs" />
-    <Compile Include="ImageBiz.cs" />
+    <Compile Include="ImgBiz\ImageBiz.cs" />
+    <Compile Include="ImgBiz\QiniuImgBiz.cs" />
     <Compile Include="ManagerBiz.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAuthCookie.cs" />
@@ -65,6 +74,9 @@
       <Project>{5f861e94-52d6-45f2-896e-1aa1af85fcb3}</Project>
       <Name>myplat.Util</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
