--- a/bcms/myplat.UIManage/Web.config
+++ b/bcms/myplat.UIManage/Web.config
@@ -21,7 +21,15 @@
 
     <!-- Cookie配置 -->
     <add key="CookieName" value="manager_cookie" />
-  
+
+    <!-- Qiniu key -->
+    <add key="QiniuAccessKey" value="xglkrgcpumWcTGzzTbL6ssuZIdiVfigPJ8nRs53B" />
+    <add key="QiniuSecretKey" value="mLA4S6ikIFjA0HEuK_tAaufiIQfw_coQU3GJGIIB" />
+    <add key="DefaultBucket" value="imagehole" />
+    <add key="ImageUrlPrefix" value="http://p3tpsvuiu.bkt.clouddn.com/" />
+
+    
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -34,7 +42,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
