--- a/bcms/myplat.Test/App.config
+++ b/bcms/myplat.Test/App.config
@@ -10,6 +10,19 @@
   </startup>
 
   <appSettings>
+
+    <!-- log4net配置 -->
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="True" />
+
+    <!-- Cookie配置 -->
+    <add key="CookieName" value="manager_cookie" />
+
+    <!-- Qiniu key -->
+    <add key="QiniuAccessKey" value="xglkrgcpumWcTGzzTbL6ssuZIdiVfigPJ8nRs53B" />
+    <add key="QiniuSecretKey" value="mLA4S6ikIFjA0HEuK_tAaufiIQfw_coQU3GJGIIB" />
+    <add key="DefaultBucket" value="imagehole" />
+    <add key="ImageUrlPrefix" value="http://p3tpsvuiu.bkt.clouddn.com/" />
   </appSettings>
   
   <runtime>
