--- a/bcms/myplat.UIManage/myplat.UIManage.csproj
+++ b/bcms/myplat.UIManage/myplat.UIManage.csproj
@@ -554,6 +554,7 @@
     <Content Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\default.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
