--- a/bcms/myplat.UIWap/myplat.UIWap.csproj
+++ b/bcms/myplat.UIWap/myplat.UIWap.csproj
@@ -212,6 +212,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Thread.cshtml" />
     <Content Include="Views\Home\ThreadRelationPartial.cshtml" />
+    <Content Include="Views\Home\ThreadWanDu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
